# dde-app-services

dconfig-center/: CMakeLists.txt
dconfig-center/dde-dconfig-daemon/: dconfig_global.h  dconfigconn.cpp  dconfigconn.h  dconfigrefmanager.cpp  dconfigrefmanager.h  dconfigresource.cpp  dconfigresource.h  dconfigserver.cpp  dconfigserver.h  dgeneralconfigmanager.cpp  dgeneralconfigmanager.h
dconfig-center/example/: dbus-dconfig.sh  main.cpp  test-example.sh
rpm/: dde-app-serfices.spec
